<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Nightly</string>
    <string name="content_description">image</string>
    <string name="sleep_walker">somnambule</string>
    <string name="early_guy">couche tard</string>

    <!-- facebook -->
    <string name="app_id">363635917129853</string>

    <!-- splashscreen -->
    <string name="wait_please">Merci de patienter</string>
    <string name="picking_up">Recherche d\'une personne en cours...</string>
    <string name="saving">Application en cours...</string>
    <string name="sending">envoi en cours</string>

    <!-- toggle -->
    <string name="turn_on">on</string>
    <string name="turn_off">off</string>

    <!-- actions -->
    <string name="edit">modifier</string>
    <string name="good_night">“ bonne\nnuit ”</string>
    <string name="categories">catégories</string>
    <string name="account">mon\nprofil</string>
    <string name="conversations">chats</string>
    <string name="cancel">annuler</string>
    <string name="save_changes">mettre à jour</string>

    <!-- connection / register -->
    <string name="not_connected">non connecté</string>
    <string name="connecting">connexion en cours...</string>
    <string name="connected">connecté</string>
    <string name="continue_as">continué en tant que \n <i> %1$s %2$s </i></string>
    <string name="not_you">- ce n\'est pas vous ?</string>
    <string name="re_connect">la connexion était innactive,\nreconnexion en cours</string>
    <string name="registering">création du compte en cours</string>
    <string name="registering_part_one">enregistrement de vos informations</string>
    <string name="registering_part_two">envoi de votre photo de profil</string>

    <!-- errors -->
    <string name="bad_email">adresse email invalide</string>
    <string name="bad_login">identifiants incorrects</string>
    <string name="under_14">vous devez avoir minimum 14 ans minimum</string>
    <string name="age_not_fill">âge non renseigné</string>
    <string name="email_invalid">email invalide</string>
    <string name="password_to_short">mot de passe trop court (min. 6 caractères)</string>
    <string name="password_different">mot de passe différents</string>
    <string name="fill_all_fields">renseignez tous les champs</string>
    <string name="not_deletable_mail">merci de ne pas utiliser d\'emails jetables</string>
    <string name="upload_failed">une erreur est survenue, merci de réessayer</string>
    <string name="all_good">tous les champs sont valides</string>
    <string name="error_occured">une erreur est survenue</string>
    <string name="please_accept_cluf">vous devez accepter les conditions d\'utilisation</string>
    <string name="change_image_profil">merci de renseigner une image de profil</string>

    <!-- params -->
    <string name="create_shortcut">Raccourcis créé avec succès.</string>

    <!-- phone registration -->
    <string name="phone_registration">Vérifier mon numéro</string>
    <string name="country_default">sélectionnez votre pays</string>
    <string name="phone_number">numéro de téléphone</string>
    <string name="indicatif">33</string>
    <string name="take_photo">Prendre une photo</string>
    <string name="pick_photo">Choisir existante</string>

    <!-- login -->
    <string name="email">email</string>
    <string name="password">mot de passe</string>
    <string name="repassword">resaisir le mot de passe</string>
    <string name="error_bad_password">Erreur, l\'email ou le mot de passe est incorrect.</string>
    <string name="login">connexion</string>
    <string name="register">s\'enregistrer</string>
    <string name="lost_password"> - mot de passe oublié -</string>
    <string name="cluf"><u>- conditions générales d\'utilisation -</u></string>
    <string name="facebook_connect">connexion Facebook</string>

    <!-- register -->
    <string name="next">suivant</string>
    <string name="previous">précédent</string>
    <string name="lastname">nom</string>
    <string name="firstname">prénom</string>
    <string name="gender">sexe</string>
    <string name="language">langue</string>
    <string name="french">Français</string>
    <string name="english">English</string>
    <string name="birthddayate">date de naissance</string>
    <string name="need_intel">Nous avons besoin de quelques informations</string>
    <string name="few_more">Encore quelques informations, vous y êtes presque</string>
    <string name="accept_cluf">J\'ai lu et j\'accepte les termes des conditions</string>

    <!-- camera -->
    <string name="no_camera_detected">Aucune camera disponible sur cet appareil.</string>
    <!-- days of week -->
    <string name="monday">Lundi</string>
    <string name="tuesday">Mardi</string>
    <string name="wednesday">Mercredi</string>
    <string name="thursday">Jeudi</string>
    <string name="friday">Vendredi</string>
    <string name="saturday">Samedi</string>
    <string name="sunday">Dimanche</string>

    <!-- titles -->
    <string name="title_activity_conversation">ConversationActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_phone">PhoneActivity</string>
    <string name="title_activity_list_conversation">ListConversationActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_country_selection">CountrySelectionActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_categories">CategoriesActivity</string>
    <string name="title_activity_message_received">MessageReceivedActivity</string>

    <!-- picking up -->
    <string name="nobody_available">personne ne se couche dans les 45 prochaines minutes</string>

    <!-- chat -->
    <string name="message_elipses">bonjour...</string>
    <string name="send">envoyer</string>

    <!-- notifications -->
    <string name="title_good_night">Bonne nuit !</string>

    <!-- conversation -->
    <string-array name="conversation_menu">
        <item>Ouvrir</item>
        <item>Supprimer</item>
        <item>Signaler le participant</item>
    </string-array>
    <string-array name="langues">
        <item>Français</item>
        <item>English</item>
    </string-array>
    <string-array name="picture">
        <item>Choisir existante</item>
        <item>Prendre une photo</item>
    </string-array>

    <string name="title_activity_tutorial">TutorialActivity</string>
    <string name="title_activity_continue_as">ContinueAsActivity</string>
    <string name="title_activity_reconnection">ReconnectionActivity</string>
    <string name="title_activity_list_categories">ListCategoriesActivity</string>

</resources>