<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/containerMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_login"
    android:fitsSystemWindows="true" >

    <ImageView
        android:id="@+id/textLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="10dp"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/content_description"
        android:src="@drawable/text_logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical" >

        <Button
            android:id="@+id/connection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:alpha="0.8"
            android:background="@drawable/btn_pink"
            android:gravity="center_vertical|left"
            android:onClick="loginNightly"
            android:paddingBottom="12dp"
            android:paddingLeft="15dp"
            android:paddingTop="12dp"
            android:text="@string/login"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/registerUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:alpha="0.8"
            android:background="@drawable/btn_blue_action_bar"
            android:gravity="center_vertical|left"
            android:onClick="registerAccount"
            android:paddingBottom="12dp"
            android:paddingLeft="15dp"
            android:paddingTop="12dp"
            android:text="@string/register"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/connectionFb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:alpha="0.8"
            android:background="@drawable/btn_facebook"
            android:gravity="center_vertical|left"
            android:paddingBottom="12dp"
            android:paddingLeft="15dp"
            android:paddingTop="12dp"
            android:text="@string/facebook_connect"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <TextView
        android:id="@+id/textCluf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:gravity="center"
        android:text="@string/cluf"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@android:color/white" />

</RelativeLayout>