<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_login"
    android:fitsSystemWindows="true" >

    <ImageView
        android:id="@+id/textLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="10dp"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/content_description"
        android:src="@drawable/text_logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:alpha="0.7"
            android:background="@android:color/white"
            android:orientation="horizontal"
            android:onClick="openCountrySelection"
            android:padding="5dp" >

            <ImageView
                android:id="@+id/row_icon"
                android:layout_width="40dp"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/content_description"
                android:scaleType="fitXY"
                android:src="@drawable/flag_country" />

            <TextView
                android:id="@+id/row_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:padding="10dp"
                android:text="@string/country_default"
                android:textColor="@color/blue_background_dark" />
        </LinearLayout>

        <Button
            android:id="@+id/phoneRegistration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:alpha="0.8"
            android:background="@drawable/btn_pink"
            android:gravity="center"
            android:onClick="registerPhone"
            android:padding="10dp"
            android:text="@string/phone_registration"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <TextView
        android:id="@+id/textCluf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:gravity="center"
        android:text="@string/cluf"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@android:color/white" />

</RelativeLayout>