<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_login_second"
    android:fitsSystemWindows="true"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="25dp"
            android:gravity="center"
            android:text="@string/few_more"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@android:color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/connectionState"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@color/progress"
                android:padding="5dp"
                android:text="connexion en cours"
                android:textColor="@android:color/white"
                android:visibility="gone" />

            <AutoCompleteTextView
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@android:color/white"
                android:hint="@string/email"
                android:imeOptions="actionNext"
                android:lines="1"
                android:maxLines="1"
                android:nextFocusDown="@+id/password"
                android:padding="10dp"
                android:textColor="@color/blue_background_dark"
                android:textColorHighlight="@color/blue_background_dark"
                android:textColorHint="@color/blue_background_dark" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:background="@android:color/white"
                android:orientation="horizontal"
                android:paddingBottom="3dp"
                android:paddingTop="3dp" >

                <EditText
                    android:id="@+id/password"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/white"
                    android:hint="@string/password"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"
                    android:lines="1"
                    android:maxLines="1"
                    android:nextFocusDown="@+id/repassword"
                    android:padding="10dp"
                    android:textColor="@color/blue_background_dark"
                    android:textColorHighlight="@color/blue_background_dark"
                    android:textColorHint="@color/blue_background_dark" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="fill_parent"
                    android:background="@color/separator_background_top_panel" />

                <ImageView
                    android:id="@+id/seenClear"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.2"
                    android:background="@drawable/btn_update"
                    android:clickable="true"
                    android:contentDescription="@string/content_description"
                    android:src="@drawable/ic_see" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:background="@android:color/white"
                android:orientation="horizontal"
                android:paddingBottom="3dp"
                android:paddingTop="3dp" >

                <EditText
                    android:id="@+id/repassword"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/white"
                    android:hint="@string/repassword"
                    android:inputType="textPassword"
                    android:lines="1"
                    android:maxLines="1"
                    android:padding="10dp"
                    android:textColor="@color/blue_background_dark"
                    android:textColorHighlight="@color/blue_background_dark"
                    android:textColorHint="@color/blue_background_dark" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="fill_parent"
                    android:background="@color/separator_background_top_panel" />

                <ImageView
                    android:id="@+id/reSeenClear"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.2"
                    android:background="@drawable/btn_update"
                    android:clickable="true"
                    android:contentDescription="@string/content_description"
                    android:src="@drawable/ic_see" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/previous"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="3dp"
                    android:layout_weight="1"
                    android:alpha="0.8"
                    android:background="@drawable/btn_facebook"
                    android:gravity="center"
                    android:onClick="previous"
                    android:padding="10dp"
                    android:text="@string/previous"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@android:color/white" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="fill_parent"
                    android:alpha="0.8"
                    android:background="@android:color/white" />

                <Button
                    android:id="@+id/next"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="3dp"
                    android:layout_weight="1"
                    android:alpha="0.8"
                    android:background="@drawable/btn_facebook"
                    android:gravity="center"
                    android:onClick="next"
                    android:padding="10dp"
                    android:text="@string/next"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@android:color/white" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>